style.css
@import url('https://fonts.googleapis.com/css2?family=Oxanium&display=swap');
:root {
  --box-shadow: rgb(100, 100, 100);
  --scroll-track: rgb(0, 143, 226);
  --scroll-thumb: rgb(0, 105, 153);
  --scroll-shadow: rgb(54, 54, 54);
}
.dark {
  --main-bg: rgb(27, 38, 44);
  --bg-1: rgb(15, 76, 117);
  --bg-2: rgb(50, 130, 184);
  --bg-3: rgb(187, 225, 250);
  --btn-hover: rgb(50, 130, 184);
}
.light {
  --main-bg: rgb(224, 252, 255);
  --bg-1: rgb(144, 242, 255);
  --bg-2: rgb(110, 182, 255);
  --bg-3: rgb(112, 152, 218);
  --btn-hover: rgb(110, 182, 255);
}
* {
  font-family: 'Oxanium', cursive !important;
  color: black;
}
body,
html {
  width: 99vw;
  height: 96vh;
}
body {
  display: grid;
  grid-template-rows: 40px 1fr 40px;
  row-gap: 20px;
  margin-top: 20px;
  margin-bottom: 20px;
  justify-content: center;
  background-color: var(--main-bg);
}
footer,
article,
header {
  display: flex;
  flex-direction: row;
  justify-self: center;
  flex-wrap: wrap;
  background-color: var(--bg-1);
  box-sizing: border-box;
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
}
footer,
header {
  column-gap: 5px;
  padding: 5px;
  color: white;
}
footer a {
  width: 100%;
  height: 100%;
}
article {
  width: calc(100vw - 150px);
  height: calc(96vh - 80px - 40px);
}
ul {
  list-style-type: none;
}
article > div {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  align-items: center;
  padding: 10px 5px 10px 10px;
  margin-right: 5px;
  row-gap: 10px;
  box-sizing: border-box;
}
.list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  overflow-y: auto;
}
.explantation::-webkit-scrollbar,
.list::-webkit-scrollbar {
  width: 8px;
  height: 8px;
}
.explantation::-webkit-scrollbar-track,
.explantation::-webkit-scrollbar-thumb,
.list::-webkit-scrollbar-track,
.list::-webkit-scrollbar-thumb {
  background-clip: padding-box;
  border-radius: 7.5px;
  border-style: solid;
  border-width: 2px;
  border-color: transparent;
}
.explantation::-webkit-scrollbar-track,
.list::-webkit-scrollbar-track {
  box-shadow: 0 0 3px var(--scroll-shadow);
  border-width: initial;
  border: 0px solid transparent;
  background-color: var(--scroll-track);
}
.explantation::-webkit-scrollbar-thumb,
.list::-webkit-scrollbar-thumb {
  border: 2px solid transparent;
  border-radius: 4px;
  background-color: var(--scroll-thumb);
  cursor: move;
}
.grayheader {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  width: 100%;
  align-items: center;
  font-size: 20px;
  padding: 10px 0 10px 0;
  border-radius: 5px;
  background-color: rgb(144, 161, 170);
  box-shadow: 0 0 5px var(--box-shadow);
}
.grayheader > * {
  width: fit-content;
}
.grayheader button {
  background-color: var(--bg-3);
}
.grayheader button.back {
  grid-column: 1/2;
  justify-self: start;
  margin-left: 10px;
}
.grayheader span {
  grid-column: 2/3;
  justify-self: center;
}
.grayheader button.offsite {
  grid-column: 3/4;
  justify-self: end;
  margin-right: 10px;
}
button {
  all: initial;
  cursor: pointer;
  padding: 5px;
  border-radius: 5px;
  transition: background-color .3s, box-shadow .3s;
}
button:hover {
  background-color: var(--btn-hover);
  box-shadow: 0 0 3px var(--box-shadow);
}
.tool.card {
  display: flex;
  text-align: center;
  column-gap: 10px;
  flex: 1 0 500px;
  max-width: 700px;
  background-color: var(--bg-2);
  padding: 5px;
  margin: 5px;
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
  height: 200px;
  box-sizing: border-box;
  overflow: hidden;
}
.tool.card img {
  height: 190px;
  border-radius: 5px;
}
.tool.card p {
  font-size: 18px;
}
.explantation {
  display: flex;
  flex-direction: column;
  row-gap: 10px;
  width: 100%;
  padding: 5px;
  padding-right: 8px;
  margin: 0;
  margin-right: 5px;
  box-sizing: border-box;
  overflow-y: auto;
}
.explantation li {
  display: flex;
  flex-direction: row;
  text-align: center;
  column-gap: 10px;
  background-color: var(--bg-2);
  padding: 5px;
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
  height: 360px;
  width: 100%;
  box-sizing: border-box;
}
.explantation li div {
  width: 100%;
  display: flex;
  flex-direction: column;
}
.explantation li p {
  font-size: 18px;
  margin-top: 10px;
}
.explantation li img {
  height: 350px;
  border-radius: 5px;
}
.explantation li button {
  background-color: var(--bg-3);
  box-shadow: 0 0 5px var(--box-shadow);
  width: fit-content;
  align-self: center;
}
.list.choice {
  display: flex;
  flex-direction: column;
}
.list.choice .card {
  background-color: var(--bg-2);
  padding: 5px;
  margin: 5px;
  border-radius: 10px;
  box-shadow: 0 0 5px var(--box-shadow);
  font-size: 25px;
  box-sizing: border-box;
  width: fit-content;
  align-self: center;
}
.keuze {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
}
.keuze .vragen {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  height: fit-content;
  background-color: var(--bg-2);
  box-shadow: 0 0 5px var(--box-shadow);
  border-radius: 10px;
  margin: 0;
  padding: 0;
}
.keuze .vragen li {
  display: grid;
  align-content: center;
  gap: 5px;
  margin: 10px;
  padding: 8px;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 20px 1fr;
  border-radius: 5px;
  box-shadow: 0 0 5px var(--box-shadow);
  background-color: var(--bg-1);
}
.keuze .vragen li span {
  grid-column: 1/3;
}
.keuze .vragen li button {
  text-align: center;
}

